# storai

./: README.md  Syllabus.md  Untitled Diagram.drawio  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/process-session-test/: page.tsx
app/session/[id]/: page.tsx
src/application/services/: session-manager.ts
src/application/use-cases/: generate-clinical-summary.ts
src/domain/entities/: clinical-session.ts  clinical-summary.ts  session-metadata.ts
src/domain/interfaces/: external-interfaces.ts  transcription-service.ts
src/domain/repositories/: session-repository.ts
src/domain/validators/: clinical-session.schema.ts
src/infrastructure/: di-container.ts  types.ts
src/infrastructure/db/: postgres-session-repository.ts
src/infrastructure/ehr/: dummy-ehr-adapter.ts
src/infrastructure/llm/: openai-adapter.ts
src/infrastructure/policy/: simple-ethics-policy.ts
src/infrastructure/transcription/: whisper-adapter.ts
src/presentation/api/: session-controller.ts
src/presentation/components/: SessionPage.tsx
storai/: README.md  download-model.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
storai/public/: index.html
storai/src/: App.css  App.tsx  index.css  main.tsx  tauri.d.ts
storai/src-tauri/: Cargo.toml  tauri.conf.json
storai/src-tauri/capabilities/: default.json
storai/src-tauri/src/: main.rs
storai/src/styles/: variables.css
storai/src/types/: tauri-api.d.ts
storai/src/utils/: platform.ts
test_files/: test.txt
(+61 files in other folders)
