[package]
name = "storai"
version = "0.1.0"
description = "HIPAA-compliant clinical notes summarizer"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "storai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.18", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Removed rusqlite dependency to avoid conflicts
magic-crypt = "3.1.13"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
dirs = "5.0"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

